web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-function-expression-default-value/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,19)
1|(function(a = 1){ "use strict"; })
 |                 ^
